--- a/CHANGES
+++ b/CHANGES
@@ -24,6 +24,7 @@
    - fixing the strrchr bug (reported by Gernot Tenchio)
    - fixing the strtoul/strtoull bug (reported by Gernot Tenchio)
    - adding the patch to printf (Gernot Tenchio)
+   - fixing snprintf (Gernot Tenchio)
 
 0.23:
   update sys/soundcard.h
