--- a/CHANGES
+++ b/CHANGES
@@ -28,6 +28,7 @@
    - fixing memccpy,memcmp,strncmp (reported by Gernot Tenchio)
    - fixing strtoXXX (Gernot Tenchio, patch modified)
    - fixing the *scanf return behavior (reported by Enrico Scholz)
+  add printf test
 
 0.23:
   update sys/soundcard.h
