--- a/CHANGES
+++ b/CHANGES
@@ -31,6 +31,8 @@
   add printf test
   change sys_siglist to char** (removes linker warning)
   fix getnameinfo (Arnaldo Carvalho de Melo)
+  add ar.h (for GNU make)
+  replace qsort with new quicksort with three-way partitioning
 
 0.23:
   update sys/soundcard.h
