parisc start fix (Gerrit Pape)

--- a/CHANGES
+++ b/CHANGES
@@ -33,6 +33,7 @@
   fix getnameinfo (Arnaldo Carvalho de Melo)
   add ar.h (for GNU make)
   replace qsort with new quicksort with three-way partitioning
+  parisc start.S fix (Gerrit Pape)
 
 0.23:
   update sys/soundcard.h
