--- a/THANKS
+++ b/THANKS
@@ -26,7 +26,8 @@ I also grabbed code from glibc (mostly assembly routines), and looked at
 the OpenBSD libc for inspiration.
 
 Michal Ludvig did the porting to x86_64 and Gwenole Beauchesne helped
-finish the port.
+finish the port.  Gwenole also reported many bugs and helped with some
+of the more obscure platforms.
 
 Johannes Stezenbach improved the MIPS port.
 
