--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@
   head -1  ->  head -n 1
   handle negative precision and -0 (Jens Låås)
   susv3 renamed IFNAMSIZ to IF_NAMESIZE
+  make diet accept "gcc-3.3.2" and "diet -v -Os gcc" (Yuri Kozlov)
 
 0.24:
   work around incompatible Linux select() modifying the timeout in
