remove C++ comments from header files

--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,7 @@
     Now we need more manpower to fix the bugs it uncovers ;-)
   add linux/if_ether.h and net/ethernet.h for sniffers
   faster string routines and a small fix for alloc (Thomas Ogrisegg)
+  remove C++ comments from header files
 
 0.24:
   work around incompatible Linux select() modifying the timeout in
