--- a/CHANGES
+++ b/CHANGES
@@ -11,6 +11,7 @@
   add linux/if_ether.h and net/ethernet.h for sniffers
   faster string routines and a small fix for alloc (Thomas Ogrisegg)
   remove C++ comments from header files
+  add ftrylockfile
 
 0.24:
   work around incompatible Linux select() modifying the timeout in
