--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,8 @@
   add ftrylockfile
   C99 fixes and a new printf test from Enrico Scholz
   epoll_event needs to be packed on x86_64 (pointed out by Indan Zupancic)
+  work around make dependency problem breaking mipsel by creating kludge
+    mipsel/syscalls.h (Samium Gromoff)
 
 0.24:
   work around incompatible Linux select() modifying the timeout in
