--- a/CHANGES
+++ b/CHANGES
@@ -20,6 +20,7 @@
     Clifford Wolf)
   vsnprintf: fix output when output does not fit (Enrico Scholz)
   new dirname with test suite entry (Yuri Kozlov)
+  fnmatch: add [:charclass:], fix negation (Michael J. Pomraning)
 
 0.24:
   work around incompatible Linux select() modifying the timeout in
