make calloc weak (Martin Pohlack)

--- a/CHANGES
+++ b/CHANGES
@@ -21,6 +21,7 @@
   vsnprintf: fix output when output does not fit (Enrico Scholz)
   new dirname with test suite entry (Yuri Kozlov)
   fnmatch: add [:charclass:], fix negation (Michael J. Pomraning)
+  make calloc a weak symbol (Martin Pohlack)
 
 0.24:
   work around incompatible Linux select() modifying the timeout in
