--- a/CHANGES
+++ b/CHANGES
@@ -23,6 +23,7 @@
   fnmatch: add [:charclass:], fix negation (Michael J. Pomraning)
   make calloc a weak symbol (Martin Pohlack)
   make NULL C++ friendly (Martin Pohlack)
+  new realpath (Thomas Ogrisegg)
 
 0.24:
   work around incompatible Linux select() modifying the timeout in
