--- a/CHANGES
+++ b/CHANGES
@@ -24,6 +24,7 @@
   make calloc a weak symbol (Martin Pohlack)
   make NULL C++ friendly (Martin Pohlack)
   new realpath (Thomas Ogrisegg)
+  fix stupid glibcism in sys/epoll.h
 
 0.24:
   work around incompatible Linux select() modifying the timeout in
