ARGH!  gcc 3.4 breaks regparm attributes on i386!

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@
     - adding 'getgrouplist'
     - fixing type of 'unsetenv'
     - adding missing realtime syscalls 'clock_*' 'timer_*' and types
+  ARGH!  gcc 3.4 breaks regparm attributes on i386!
 
 0.25:
   fix sprintf
