--- a/CHANGES
+++ b/CHANGES
@@ -1,13 +1,14 @@
 0.26:
   iconv UTF-8 fix (Kuba Winnicki)
   Olaf:
-    - adding 'getgrouplist'
-    - fixing type of 'unsetenv'
-    - adding missing realtime syscalls 'clock_*' 'timer_*' and types
+    - add 'getgrouplist'
+    - fix type of 'unsetenv'
+    - add missing realtime syscalls 'clock_*' 'timer_*' and types
   ARGH!  gcc 3.4 breaks regparm attributes on i386!
   grep portability fixes (Gunnar Ritter)
   add empty libcrypt.a to help compile code from others (Gunnar Ritter)
   add make uninstall
+  fix pread64
 
 0.25:
   fix sprintf
