--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,7 @@
   add make uninstall
   fix pread64
   Olaf: fix for pread,pwrite and pwrite64 (wrong hi-,low-offset order)
+  Olaf: MIPS has a special case for the pread/pwrite syscall...
 
 0.25:
   fix sprintf
