--- a/CHANGES
+++ b/CHANGES
@@ -8,7 +8,7 @@
   grep portability fixes (Gunnar Ritter)
   add empty libcrypt.a to help compile code from others (Gunnar Ritter)
   add make uninstall
-  fix pread64
+  fix pread64, pwrite64
   Olaf: MIPS has a special case for the pread/pwrite syscall ...
   Use -isystem instead of -I for our system includes (Paul Jarc)
 
