--- a/CHANGES
+++ b/CHANGES
@@ -11,6 +11,7 @@
   fix pread64, pwrite64
   Olaf: MIPS has a special case for the pread/pwrite syscall ...
   Use -isystem instead of -I for our system includes (Paul Jarc)
+  Add MNT_DETACH to sys/mount.h
 
 0.25:
   fix sprintf
