--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,7 @@
   Olaf: MIPS has a special case for the pread/pwrite syscall ...
   Use -isystem instead of -I for our system includes (Paul Jarc)
   Add MNT_DETACH to sys/mount.h
+  add pselect
 
 0.25:
   fix sprintf
