--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 0.27:
   change DNS routines to look for ip6.arpa instead of ip6.int
+  WANT_FREAD_OPTIMIZATION was broken on sockets (Johannes Stezenbach)
 
 0.26:
   iconv UTF-8 fix (Kuba Winnicki)
