--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
 0.27:
   change DNS routines to look for ip6.arpa instead of ip6.int
   WANT_FREAD_OPTIMIZATION was broken on sockets (Johannes Stezenbach)
+  Olaf:
+    - added fix for getgrouplist (Nikola Vladov)
+    - fix the fd leak on error path (Denis Vlasenko)
 
 0.26:
   iconv UTF-8 fix (Kuba Winnicki)
