--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,8 @@
   Olaf:
     - added fix for getgrouplist (Nikola Vladov)
     - fix the fd leak on error path (Denis Vlasenko)
+    - the regparm attribute in typedefinition generats error with gcc-2.95
+      on non-x86 arch... (reported: Johannes Stezenbach)
 
 0.26:
   iconv UTF-8 fix (Kuba Winnicki)
