--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,7 @@
     - the regparm attribute in typedefinition generats error with gcc-2.95
       on non-x86 arch... (reported: Johannes Stezenbach)
   PowerPC build fix (Gerrit Pape)
+  Olaf: added missing settimeofday
 
 0.26:
   iconv UTF-8 fix (Kuba Winnicki)
