--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,7 @@
       on non-x86 arch... (reported: Johannes Stezenbach)
   PowerPC build fix (Gerrit Pape)
   Olaf: added missing settimeofday
+  add netinet/ether.h and netinet/if_ether.h
 
 0.26:
   iconv UTF-8 fix (Kuba Winnicki)
