--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,7 @@
   Olaf: added missing settimeofday
   add netinet/ether.h and netinet/if_ether.h
   add linux/fd.h
+  add pivot_root prototype to unistd.h
 
 0.26:
   iconv UTF-8 fix (Kuba Winnicki)
