--- a/CHANGES
+++ b/CHANGES
@@ -10,7 +10,7 @@
   Olaf: added missing settimeofday
   add netinet/ether.h and netinet/if_ether.h
   add linux/fd.h
-  add pivot_root prototype to unistd.h
+  add pivot_root, delete_module and init_module prototypes to unistd.h
 
 0.26:
   iconv UTF-8 fix (Kuba Winnicki)
