--- a/CHANGES
+++ b/CHANGES
@@ -11,6 +11,7 @@
   add netinet/ether.h and netinet/if_ether.h
   add linux/fd.h
   add pivot_root, delete_module and init_module prototypes to unistd.h
+    (protected by _LINUX_SOURCE)
 
 0.26:
   iconv UTF-8 fix (Kuba Winnicki)
