--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,7 @@
   add linux/fd.h
   add pivot_root, delete_module and init_module prototypes to unistd.h
     (protected by _LINUX_SOURCE)
+  add some BSD legacy declarations to dirent.h (Bryan Henderson)
 
 0.26:
   iconv UTF-8 fix (Kuba Winnicki)
