--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,7 @@
   add pivot_root, delete_module and init_module prototypes to unistd.h
     (protected by _LINUX_SOURCE)
   add some BSD legacy declarations to dirent.h (Bryan Henderson)
+  add strtoull and strtoll as aliases to strtoull and strtoll
 
 0.26:
   iconv UTF-8 fix (Kuba Winnicki)
