use _FILE_OFFSET_BITS consistently (Indan Zupancic)

--- a/FAQ
+++ b/FAQ
@@ -245,7 +245,7 @@ A: diet -Os uses some platform dependant gcc options to create tighter
    code.  Unfortunately, these options have been renamed on gcc 3.  You
    can fix this by creating a file ~/.diet/gcc containing this line:
 
-     -Os -fomit-frame-pointer -falign-functions=0 -falign-jumps=0 -falign-loops=0 -mpreferred-stack-boundary=2
+     -Os -fomit-frame-pointer -falign-jumps=1 -falign-loops=1 -mpreferred-stack-boundary=2
 
    If you get this options not for diet -Os gcc but for diet -Os
    i386-linux-gcc, put this in ~/.diet/i386-linux-gcc instead.
