--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,7 @@
     (protected by _LINUX_SOURCE)
   add some BSD legacy declarations to dirent.h (Bryan Henderson)
   add strtoull and strtoll as aliases to strtoull and strtoll
+  use _FILE_OFFSET_BITS consistently (Indan Zupancic)
 
 0.26:
   iconv UTF-8 fix (Kuba Winnicki)
