--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@
     These are in libgcc, but libgcc is compiled PIC and we compile the
     diet libc non-pic, and that is not compatible on MIPS so ld
     complains.
+  setlocale now accepts setting the locale to "C".
 
 0.27:
   change DNS routines to look for ip6.arpa instead of ip6.int
