several patches from Gwenole

--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@
     diet libc non-pic, and that is not compatible on MIPS so ld
     complains.
   setlocale now accepts setting the locale to "C".
+  several fixes from Gwenole Beauchesne, AMD64 and otherwise.
 
 0.27:
   change DNS routines to look for ip6.arpa instead of ip6.int
