--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,7 @@
   setlocale now accepts setting the locale to "C".
   several fixes from Gwenole Beauchesne, AMD64 and otherwise.
   fix memory leak in regfree (thanks, Valgrind!).
+  add support for gcc ProPolice and stack gap (see README.security).
 
 0.27:
   change DNS routines to look for ip6.arpa instead of ip6.int
