--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,7 @@
   several fixes from Gwenole Beauchesne, AMD64 and otherwise.
   fix memory leak in regfree (thanks, Valgrind!).
   add support for gcc ProPolice and stack gap (see README.security).
+  add ftw64 (yuck!)
 
 0.27:
   change DNS routines to look for ip6.arpa instead of ip6.int
