--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,7 @@
   #include <endian.h> in syscalls.s/environ.S to make sure environ is
     actually large enough (Enrico Scholz)
   add waitpid wrapper around wait4 for arm-linux (Avinash Bhatia)
+  make res_mkquery reject invalid domains (label>64, name>255) (Nikola Vladov)
 
 0.27:
   change DNS routines to look for ip6.arpa instead of ip6.int
