--- a/CHANGES
+++ b/CHANGES
@@ -17,6 +17,7 @@
     received (Nikola Vladov)
   fix PT_READ_U in sys/trace.h (John K. Hohm)
   Olaf: added mmap64 wrapper (arm,mips,sparc,...)
+  work around new kernel rt signal semantics (need to set restorer function)
 
 0.27:
   change DNS routines to look for ip6.arpa instead of ip6.int
