--- a/CHANGES
+++ b/CHANGES
@@ -18,6 +18,10 @@
   fix PT_READ_U in sys/trace.h (John K. Hohm)
   Olaf: added mmap64 wrapper (arm,mips,sparc,...)
   work around new kernel rt signal semantics (need to set restorer function)
+  Olaf:
+    - libdl + gcc 3.4 resulted in a SIGSEGV because local names were
+      dynamically resolved....
+    - Also fixed a bug in the symbol resolver
 
 0.27:
   change DNS routines to look for ip6.arpa instead of ip6.int
