--- a/CHANGES
+++ b/CHANGES
@@ -23,6 +23,8 @@
       dynamically resolved....
     - Also fixed a bug in the symbol resolver
     - fixing the mmap64 stuff & arm/dyn_syscalls had no mmap2 (Gerrit Pape)
+  tzfile parser fix (John K. Hohm)
+  ppc64 fixes (Gwenole Beauchesne)
 
 0.27:
   change DNS routines to look for ip6.arpa instead of ip6.int
