--- a/CHANGES
+++ b/CHANGES
@@ -29,6 +29,8 @@
   minor additions to make gdb 6.3 happy (John K. Hohm)
   ld.so support for gdb (John K. Hohm)
   implement nice(2) via setpriority() if there is no nice syscall
+  support libm.so (John K. Hohm)
+  hack rpc/xdr.h to work with gcc 4 (Andreas Jochens via Gerrit Pape)
 
 0.27:
   change DNS routines to look for ip6.arpa instead of ip6.int
