--- a/CHANGES
+++ b/CHANGES
@@ -31,6 +31,7 @@
   implement nice(2) via setpriority() if there is no nice syscall
   support libm.so (John K. Hohm)
   hack rpc/xdr.h to work with gcc 4 (Andreas Jochens via Gerrit Pape)
+  make dyn didn't work for !WANT_FULL_RESOLV_CONF (Sampo Kellomaki)
 
 0.27:
   change DNS routines to look for ip6.arpa instead of ip6.int
