--- a/CHANGES
+++ b/CHANGES
@@ -34,6 +34,7 @@
   make dyn didn't work for !WANT_FULL_RESOLV_CONF (Sampo Kellomaki)
   #undef __i686 in i386/PIC.h (George Sawinski)
   fix timegm bug (found by Nikola Vladov)
+  add sys/swap.h (George Sawinski)
 
 0.27:
   change DNS routines to look for ip6.arpa instead of ip6.int
