--- a/CHANGES
+++ b/CHANGES
@@ -35,6 +35,7 @@
   #undef __i686 in i386/PIC.h (George Sawinski)
   fix timegm bug (found by Nikola Vladov)
   add sys/swap.h (George Sawinski)
+  Olaf: dynamic x86_64 support (libdl relocator and dyn_syscalls)
 
 0.27:
   change DNS routines to look for ip6.arpa instead of ip6.int
