--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,7 @@
     ilp64 compatibility
     make diet libc compile with -Werror on 13 platforms
   ppc64 now compiles again
+  typo in libcompat/syscall.S for WANT_THREAD_SAFE (Björn Döbel)
 
 0.28:
   add tcgetsid (Yuri Kozlov)
