add link.h (probably only useful to compile an ia64 cross-gcc)

--- a/CHANGES
+++ b/CHANGES
@@ -18,6 +18,7 @@
   fix s/390 syscalls > 255
   add "diet -L gcc" option to print the lib path
   remove new gcc4 signedness warnings
+  add link.h (probably only useful to compile an ia64 cross-gcc)
 
 0.28:
   add tcgetsid (Yuri Kozlov)
