implement gettimeofday vsyscall for x86_64   replace unfinished plug&play DNS hack with zeroconf,     rename dietfeatures.h option to WANT_PLUGPLAY_DNS.     A small dns daemon can be found in contrib/dnsd.c     Not tested at all except against each other!

--- a/CHANGES
+++ b/CHANGES
@@ -27,6 +27,11 @@
   support syscall on sparc and x86_64 (Herbert Poetzl)
   change alignment code in gethostbyname_r (Herbert Poetzl)
   avoid bus errors in DNS code
+  implement gettimeofday vsyscall for x86_64
+  replace unfinished plug&play DNS hack with zeroconf,
+    rename dietfeatures.h option to WANT_PLUGPLAY_DNS.
+    A small dns daemon can be found in contrib/dnsd.c
+    Not tested at all except against each other!
 
 0.28:
   add tcgetsid (Yuri Kozlov)
