--- a/CHANGES
+++ b/CHANGES
@@ -32,6 +32,7 @@
     rename dietfeatures.h option to WANT_PLUGPLAY_DNS.
     A small dns daemon can be found in contrib/dnsd.c
   fix bug regarding regular expressions like "(a|)b"
+  work around gcc 4 bug
 
 0.28:
   add tcgetsid (Yuri Kozlov)
