--- a/CHANGES
+++ b/CHANGES
@@ -39,6 +39,7 @@
   fix bug regarding regular expressions like "(a|)b"
   work around gcc 4 bug
   make sure diet always leaves -V in front of the gcc command line
+  sparc64 fixes (Martin)
 
 0.28:
   add tcgetsid (Yuri Kozlov)
