remove throw() statements for functions taking function pointer     arguments (qsort, besearch, ftw)

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,8 @@
     (both Markus Oberhumer)
   whoops, strptime was completely broken, and noone noticed :-)
   fix DNS resolver to only use shorter timeout for .local queries
+  remove throw() statements for functions taking function pointer
+    arguments (qsort, besearch, ftw)
 
 0.29:
   oops, fix LD_RUN_PATH unsetting (Enrico Scholz)
