gcc 4 no longer guarantees that two static arrays declared after each other actually are after each other.  I don't know where Rene got this code, but it relied on that.

--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,7 @@
     querying DNS.  This is how glibc does it, and it means you can use
     e.g. elinks to browse http://localhost/ without being connected to
     the internet / a DNS server.
+  make libcrypt/crypt.c to work when compiled with gcc 4
 
 0.29:
   oops, fix LD_RUN_PATH unsetting (Enrico Scholz)
