--- a/CHANGES
+++ b/CHANGES
@@ -15,6 +15,7 @@
   make libcrypt/crypt.c to work when compiled with gcc 4
   provide toascii and ustat (Reynir Stefansson)
   change size of struct sigaction.sa_flags from long to int on alpha.
+  beginnings of wide char string routines
 
 0.29:
   oops, fix LD_RUN_PATH unsetting (Enrico Scholz)
