ARM big-endian support (Paul Clifford)

--- a/CHANGES
+++ b/CHANGES
@@ -17,6 +17,7 @@
   change size of struct sigaction.sa_flags from long to int on alpha.
   beginnings of wide char string routines
   fix regex match bug ("@(a|b)" would also match "x@z")
+  ARM big-endian support (Paul Clifford)
 
 0.29:
   oops, fix LD_RUN_PATH unsetting (Enrico Scholz)
