fix two strptime bugs (Gernot Tenchio)

--- a/CHANGES
+++ b/CHANGES
@@ -19,6 +19,7 @@
   fix regex match bug ("@(a|b)" would also match "x@z")
   ARM big-endian support (Paul Clifford)
   support %s in strftime, so date in embutils does :-)
+  fix two strptime bugs (Gernot Tenchio)
 
 0.29:
   oops, fix LD_RUN_PATH unsetting (Enrico Scholz)
