--- a/CHANGES
+++ b/CHANGES
@@ -21,6 +21,7 @@
   support %s in strftime, so date in embutils does :-)
   fix two strptime bugs (Gernot Tenchio)
   add strnlen and clearenv (for udev)
+  #define IOV_MAX in limits.h behind _XOPEN_SOURCE (for opennntpd)
 
 0.29:
   oops, fix LD_RUN_PATH unsetting (Enrico Scholz)
