--- a/CHANGES
+++ b/CHANGES
@@ -22,6 +22,7 @@
   fix two strptime bugs (Gernot Tenchio)
   add strnlen and clearenv (for udev)
   #define IOV_MAX in limits.h behind _XOPEN_SOURCE (for opennntpd)
+  tzfile fix (Nikola Vladov)
 
 0.29:
   oops, fix LD_RUN_PATH unsetting (Enrico Scholz)
